# vnv-heap

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Readme.md  crash.txt  docker-build.sh  docker-run
assets/: .zephyrrc
counter_example/: Cargo.toml
desktop/counter_example/: Cargo.toml
desktop/counter_example/src/: main.rs
desktop/desktop_persist/: Cargo.toml  check_output.py  test_persist.py
desktop/desktop_persist/src/: main.rs
desktop_benchmark/: Cargo.toml
desktop_persist/: Cargo.toml  check_output.py  run_checked_output.sh  run_checked_output_timeout.sh  test_persist.py
desktop_playground/: Cargo.toml
desktop_playground/src/: main.rs
evaluation/: 94.vNV-Heap_An_Ownership-based_Virtually_Non-Volatile_Heap_for_Embedded_Systems.org  README.md  get_ref.ipynb  kvs.ipynb  kvs_distribution.ipynb  kvs_distribution.json  persist.ipynb  queue.ipynb  requirements.txt  spi_fram.ipynb  timer_delay.ipynb  timer_delay.txt
spi_fram_sample/: Cargo.toml  (+2 more)
vnv_heap/: Cargo.toml
vnv_heap/src/: allocation_identifier.rs  allocation_options.rs  lib.rs  persist_access_point.rs  resident_object.rs  resident_object_manager.rs  shared_persist_lock.rs  util.rs  vnv_array.rs  vnv_array_mut_ref.rs  vnv_config.rs  vnv_heap.rs  vnv_heap_metadata.rs  vnv_list.rs  vnv_list_mut_ref.rs  vnv_list_ref.rs  vnv_meta_store.rs  vnv_meta_store_item.rs  vnv_mut_ref.rs  vnv_object.rs  vnv_ref.rs  vnv_resident_heap.rs  vnv_resident_heap_manager.rs
vnv_heap/src/benchmarks/: allocate_case1.rs  allocate_max.rs  allocate_min.rs  deallocate_case1.rs  deallocate_max.rs  deallocate_min.rs  get_case1.rs  get_max.rs  get_min.rs  mod.rs  persistent_storage_read.rs  persistent_storage_write.rs
vnv_heap/src/benchmarks/applications/: mod.rs
vnv_heap/src/benchmarks/applications/event_queue/: implementation.rs  mod.rs  ram.rs  runner.rs  storage.rs  vnv_heap.rs
vnv_heap/src/benchmarks/applications/key_value_store/: bench.rs  mod.rs  page_wise.rs  runner.rs  vnv_heap.rs
vnv_heap/src/benchmarks/applications/queue/: mod.rs  ram.rs  runner.rs  storage.rs  vnv_heap.rs
vnv_heap/src/benchmarks/baseline/: baseline_deallocate_max.rs  baseline_deallocate_max_min.rs  baseline_deallocate_min.rs  baseline_deallocate_min_max.rs  mod.rs
vnv_heap/src/benchmarks/baseline/model/: memory_manager.rs  mod.rs  object.rs
vnv_heap/src/benchmarks/common/: mod.rs  object.rs
vnv_heap/src/benchmarks/common/multi_page/: memory_manager.rs  mod.rs  object.rs
vnv_heap/src/benchmarks/common/single_page/: memory_manager.rs  mod.rs  object.rs
vnv_heap/src/benchmarks/implementation/: allocate_max.rs  allocate_min.rs  deallocate_max.rs  deallocate_min.rs  get_max.rs  get_max_min.rs  get_min.rs  get_min_max.rs  mod.rs
vnv_heap/src/benchmarks/locked_wcet/: bench.rs  mod.rs  util.rs
vnv_heap/src/benchmarks/locked_wcet/sections/: mod.rs  object_manager1.rs  resident_object_manager1.rs  resident_object_manager2.rs  resident_object_manager3.rs  resident_object_manager4.rs  resident_object_metadata1.rs  storage.rs
vnv_heap/src/benchmarks/microbenchmarks/: mod.rs
vnv_heap/src/benchmarks/microbenchmarks/baseline/: baseline_allocate_max.rs  baseline_allocate_max_min.rs  baseline_allocate_min.rs  baseline_allocate_min_max.rs  baseline_deallocate_max.rs  baseline_deallocate_max_min.rs  baseline_deallocate_min.rs  baseline_deallocate_min_max.rs  baseline_get_max.rs  baseline_get_max_min.rs  baseline_get_min.rs  baseline_get_min_max.rs  mod.rs
vnv_heap/src/benchmarks/microbenchmarks/implementation/: allocate_case1.rs  allocate_max.rs  allocate_min.rs  deallocate_case1.rs  deallocate_max.rs  deallocate_min.rs  get_max.rs  get_max_2.rs  get_max_min.rs  get_max_old.rs  get_min.rs  get_min_max.rs  mod.rs
vnv_heap/src/benchmarks/microbenchmarks/storage/: mod.rs  persistent_storage_read.rs  persistent_storage_write.rs
vnv_heap/src/benchmarks/persist_latency/: bench.rs  bsize_runner.rs  dsize_runner.rs  mod.rs  runner.rs  worst_case.rs
vnv_heap/src/benchmarks/storage/: mod.rs
vnv_heap/src/modules/: mod.rs
vnv_heap/src/modules/allocator/: buddy.rs  linked_list.rs  mod.rs
vnv_heap/src/modules/allocator/buddy/: internal.rs  linked_list.rs  mod.rs
vnv_heap/src/modules/allocator/linked_list/: hole.rs  internal.rs  mod.rs
vnv_heap/src/modules/memory_provider/: mmap.rs  mod.rs
vnv_heap/src/modules/nonresident_allocator/: block.rs  buddy.rs  linked_list.rs  mod.rs
vnv_heap/src/modules/nonresident_allocator/buddy/: mod.rs
vnv_heap/src/modules/object_management/: clock.rs  default.rs  mod.rs
vnv_heap/src/modules/page_storage/: file_mmap.rs  mod.rs
vnv_heap/src/modules/persistent_storage/: access_distribution.rs  dummy.rs  file_storage.rs  mod.rs  sliced.rs  truncated.rs
vnv_heap/src/resident_object_manager/: dirty_status.rs  metadata_backup_info.rs  metadata_backup_list.rs  mod.rs  mod.rs.old  partial_dirtiness_tracking.rs  persist.rs  resident_list.rs  resident_object.rs  resident_object_backup.rs  resident_object_metadata.rs  resident_object_status.rs  test.rs
vnv_heap/src/test/: benchmarks.rs  mod.rs  persist_all.rs  persistency.rs  unload.rs
vnv_heap/src/util/: bit_array.rs  debug.rs  mmap_guard.rs  mod.rs  modular_linked_list.rs  multi_linked_list.rs
zephyr/common/spi_fram_storage/: Cargo.toml
zephyr/common/spi_fram_storage/include/: mb85rs4mt_spi_fram.h  mb85rs64v_spi_fram.h
zephyr/common/spi_fram_storage/src/: lib.rs  mb85rs4mt_fram_storage.rs  mb85rs64v_fram_storage.rs  spi_fram_storage.rs
zephyr/common/spi_fram_storage/src/xxhash/: mod.rs  xxh32.rs
zephyr/spi_fram_sample/: Cargo.toml
zephyr/spi_fram_sample/src/: lib.rs  main.c  mb85rs64v_spi_fram.h
zephyr/vnv_heap_auto_benchmark/: Cargo.toml  prj.conf  record_benchmark.py  run_all_benchmarks.sh  run_benchmark.sh  run_debug_nocapture.sh
zephyr/vnv_heap_auto_benchmark/src/: lib.rs  main.c
zephyr/vnv_heap_sample/: Cargo.toml  run.sh  run_debug.sh  run_release.sh
zephyr/vnv_heap_sample/src/: lib.rs  mb85rs64v_spi_fram.h  spi_fram_storage.rs
zephyr/vnv_heap_test/: Cargo.toml  prj.conf
zephyr/vnv_heap_test/src/: lib.rs  main.c  test.rs
(+120 files in other folders)
