[workspace]
resolver = "2"
members = [
    "counter_example",
    "desktop_benchmark",
    "desktop_persist",
    "desktop_playground",
    "vnv_heap"
]
exclude = [
    "zephyr/spi_fram_sample",
    "zephyr/vnv_heap_benchmark",
    "zephyr/vnv_heap_sample",
    "zephyr/vnv_heap_info",
    "zephyr/vnv_heap_persist",
    "zephyr/vnv_heap_test",
    "zephyr/common/spi_fram_storage"
]
