[workspace]
resolver = "2"
members = [
    "desktop/counter_example",
    "desktop/desktop_benchmark",
    "desktop/desktop_persist",
    "vnv_heap"
]
exclude = [
    "zephyr/spi_fram_sample",
    "zephyr/vnv_heap_auto_benchmark",
    "zephyr/vnv_heap_benchmark",
    "zephyr/vnv_heap_sample",
    "zephyr/vnv_heap_info",
    "zephyr/vnv_heap_persist",
    "zephyr/vnv_heap_test",
    "zephyr/common/spi_fram_storage"
]
