[package]
name = "vnv_heap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21" }
memoffset = "0.9.1"
serde = { version = "1.0.202", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", optional = true }
seq-macro = { version = "0.3.5", optional = true }
static_assertions = { version = "1.1.0" }
try-lock = "0.2.5"
polonius-the-crab = "0.4.1"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false, optional = true }
libc = { version = "0.2.155", optional = true }

[features]
default = []
persist_debug_prints = ["dep:libc"]
persist_debug_unsafe_prints = []
benchmarks = ["dep:serde", "dep:serde_json", "dep:seq-macro", "dep:rand"]

[dev-dependencies]
env_logger = "0.10.2"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
vnv_heap = { path = ".", features = ["benchmarks"] }
