[package]
name = "counter_example"
version = "0.1.0"
edition = "2021"
authors = ["Markus Elias Gerber <markus.gerber@fau.de>"]
license = "GPL-3.0"

[dependencies]
log = { version = "0.4.21", features = [ "max_level_trace", "release_max_level_warn" ] }
vnv_heap = { path = "../../vnv_heap", features = [] }
