[package]
name = "desktop_persist"
version = "0.1.0"
edition = "2021"
authors = ["Markus Elias Gerber <markus.gerber@fau.de>"]
license = "GPL-3.0"

[dependencies]
env_logger = "0.10.2"
log = { version = "0.4.21", features = [ "max_level_trace", "release_max_level_warn" ] }
vnv_heap = { path = "../../vnv_heap", features = ["persist_debug_prints"] }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
libc = "0.2.155"
