[package]
name = "vnv_heap_zephyr_auto_benchmark"
version = "0.1.0"
edition = "2018"
authors = ["Markus Elias Gerber <markus.gerber@fau.de>"]
license = "GPL-3.0"

[dependencies]
cstr = "0.2.10"
log = { version = "0.4", features = ["max_level_off" ,"release_max_level_off"] }
zephyr = { path = "../zephyr-rust/rust/zephyr" }
zephyr-macros = { path = "../zephyr-rust/rust/zephyr-macros" }
zephyr-logger = { path = "../zephyr-rust/rust/zephyr-logger" }
libc = "0.2"
vnv_heap = { path = "../../vnv_heap", features = ["benchmarks"] }
spi_fram_storage = { path = "../common/spi_fram_storage" }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
seq-macro = "0.3.5"
static_assertions = { version = "1.1.0" }
const-str = { version = "0.5.7" }
