[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
cstr = "0.2.10"
log = "0.4"
zephyr = { path = "../zephyr-rust/rust/zephyr" }
zephyr-macros = { path = "../zephyr-rust/rust/zephyr-macros" }
zephyr-logger = { path = "../zephyr-rust/rust/zephyr-logger" }
libc = "0.2"
vnv_heap = { path = "../../vnv_heap" }

[features]
default = []
# Enable this to add the std examples back into the sample
have_std = []
