[package]
name = "spi_fram_storage"
version = "0.1.0"
edition = "2021"
authors = ["Markus Elias Gerber <markus.gerber@fau.de>"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
vnv_heap = { path = "../../../vnv_heap" }
